# data_engineer_assignment

./: .flake8  pyproject.toml  requirements.txt  start_local_db_docker.sh  start_local_db_podman.sh
artifacts/images/postgres/: Dockerfile
artifacts/migrations/: 0002.inital-data_load.sql
artifacts/migrations/data/: product.csv
config/cicd/: azure-pipelines.yml
data_engineer_assignment/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  yoyo.ini
data_engineer_assignment/artifacts/migrations/: 0001.inital-schema.sql
data_engineer_assignment/artifacts/migrations/data/: customer.csv  interactions.csv
docs/jira/: 0000_feature.md  0001_refactor_testing_logic.md  0002_create_API_endpoint.md  0003_authenticate_API_endpoints.md  0004_add_logging_and_monitoring.md  0005_improvise_codebase.md
src/: app.py  config.py  factory.py
src/controllers/: auth.py  customer_controller.py  statistics_controller.py
src/repository/: base.py  postgres_repository_factory.py
src/repository/customer/: postgres.py
src/repository/statistics/: postgres.py
src/utils/db/: postgres.py
tests/: conftest.py
tests/intergration/: base_integration.py  conftest.py  test_app.py
tests/intergration/controllers/: test_app.py
tests/intergration/repository/statistics/: test_postgres.py
tests/intergration/utils/db/: test_postgres.py
tests/unit/repository/: test_factory.py
tests/unit/repository/customer/: test_customer_postgres.py
tests/unit/repository/statistics/: test_statistics_postgres.py
